--- a/site/training/_sidebar.yaml
+++ b/site/training/_sidebar.yaml
@@ -11,4 +11,5 @@ website:
         - training/program/program-overview.qmd
         - training/program/learning-paths.qmd
         - training/program/sample-training-plan.qmd
+        - training/program/sample-training-plan-2.qmd
         - training/program/training-faq.qmd
