Automatically set the year in footer

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -370,7 +370,7 @@ website:
 
   page-footer:
     background: "#DE257E"
-    left: "© Copyright 2023-2024 {{< var validmind.legal >}}  All Rights Reserved."
+    left: "© Copyright {{< now year >}} {{< var validmind.legal >}}  All Rights Reserved."
     right:
       - text: "validmind.com {{< fa external-link >}}"
         href: https://validmind.com/
