Add export docs to monitoring section in sidebar

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -325,6 +325,7 @@ website:
           - guide/monitoring/review-monitoring-results.qmd
           - text: "Metrics over time"
             file: guide/monitoring/work-with-metrics-over-time.qmd
+        - guide/model-documentation/export-documentation.qmd
         - text: "---"
         - text: "Attestation"
         - file: guide/attestation/working-with-attestations.qmd
