Fix footer links to main site

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -376,9 +376,9 @@ website:
         href: https://validmind.com/
         target: _blank
       - text: "Privacy Policy"
-        href: https://validmind.com/privacy-policy/
+        href: https://validmind.com/about/legal/privacy-policy/
       - text: "Terms of Use"
-        href: https://validmind.com/terms-of-use/
+        href: https://validmind.com/about/legal/terms-of-use/
       - icon: github
         href: https://github.com/validmind/documentation
       - icon: linkedin
