--- a/site/Makefile
+++ b/site/Makefile
@@ -1,6 +1,6 @@
 # Define source and destination directories
-LIBRARY_BRANCH ?= $(or $(BRANCH),main)
-INSTALLATION_BRANCH := main
+LIBRARY_BRANCH ?= $(or $(LIBRARY),main)
+INSTALLATION_BRANCH ?= $(or $(INSTALLATION),main)
 SRC_ROOT := _source
 SRC_DIR := $(SRC_ROOT)/validmind-library
 DEST_DIR_NB := notebooks
@@ -18,7 +18,7 @@ help:
 	@echo "Available targets:"
 	@echo "  clean                Remove the _source/ directory"
 	@echo "  clone                Clone the validmind-library repository into _source/"
-	@echo "                       Optional, for PR testing: BRANCH=<branch-name>"
+	@echo "                       Optional, for PR testing: LIBRARY=<branch-name> INSTALLATION=<branch-name>"
 	@echo "  notebooks            Copy Jupyter notebooks into notebooks/"
 	@echo "  python-docs          Copy the Python library docs into _site/validmind"
 	@echo "  get-source           Get all source files (clean, clone, notebooks, python-docs)"
@@ -38,8 +38,9 @@ help:
 # Clean up source directory
 clean:
 	@echo "\nDeleting copies of files sourced from other repos ..."
-	rm -rf $(SRC_DIR)
-	rm -rf $(SRC_ROOT)
+	@rm -rf $(SRC_DIR)
+	@rm -rf $(SRC_ROOT)
+	@rm -rf installation/*
 
 # Prompt for a branch or release tag and clone the repository
 clone:
@@ -60,8 +61,8 @@ clone:
 	fi; \
 	git clone --depth 1 -b $$CHECKOUT git@github.com:validmind/validmind-library.git $(SRC_DIR)
 
-	@echo "\nCloning installation repo from $(INSTALLATION_BRANCH) ..."; \
-	git clone  --depth 1 -b $(INSTALLATION_BRANCH) git@github.com:validmind/installation.git $(SRC_ROOT)/installation
+	echo "\nCloning installation repo from $(INSTALLATION_BRANCH) ..."; \
+	git clone --depth 1 -b $(INSTALLATION_BRANCH) git@github.com:validmind/installation.git $(SRC_ROOT)/installation
 
 copy-installation:
 	cp -r $(SRC_ROOT)/installation/site/installation installation
