--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -5,6 +5,7 @@ metadata-files:
   - developer/_sidebar.yaml
   - training/_sidebar.yaml
   - validmind/_sidebar.yml
+  - releases/_sidebar.yaml
   - installation/_sidebar.yaml
 
 website:
@@ -71,6 +72,8 @@ website:
         file: support/support.qmd
       - text: "Training"
         file: training/training.qmd
+      - text: "Releases"
+        file: releases/all-releases.qmd
       # - text: "validmind.com {{< fa external-link >}}"
       #   file: https://validmind.com/
       #   target: _blank
@@ -167,39 +170,6 @@ website:
           contents:
           - about/contributing/style-guide/voice-and-tone.qmd
           - about/contributing/style-guide/conventions.qmd
-        - text: "---"
-        - text: "Releases"
-        # MAKE-RELEASE-NOTES-EMBED-MARKER
-        - releases/2025/2025-mar-07/release-notes.qmd
-        - releases/2025/2025-jan-31/release-notes.qmd
-        # CURRENT-YEAR-END-MARKER
-        - file: releases/2024/2024-releases.qmd
-          contents:
-          - releases/2024/2024-dec-24/release-notes.qmd
-          - releases/2024/2024-dec-06/release-notes.qmd
-          - releases/2024/2024-oct-22/release-notes.qmd
-          - releases/2024/2024-sep-25/release-notes.qmd
-          - releases/2024/2024-sep-09/release-notes.qmd
-          - releases/2024/2024-aug-13/release-notes.qmd
-          - releases/2024/2024-jul-22/release-notes.qmd
-          - releases/2024/2024-jun-10/release-notes.qmd
-          - releases/2024/2024-may-22/release-notes.qmd
-          - releases/2024/2024-mar-27/highlights.qmd
-          - releases/2024/2024-feb-14/highlights.qmd
-          - releases/2024/2024-jan-26/highlights.qmd
-          - releases/2024/2024-jan-18/highlights.qmd
-        - file: releases/2023/2023-releases.qmd
-          contents:
-          - releases/2023/2023-dec-13/highlights.qmd
-          - releases/2023/2023-nov-09/highlights.qmd
-          - releases/2023/2023-oct-25/highlights.qmd
-          - releases/2023/2023-sep-27/highlights.qmd
-          - releases/2023/2023-aug-15/highlights.qmd
-          - releases/2023/release-notes-2023-jul-24.qmd
-          - releases/2023/release-notes-2023-jun-22.qmd
-          - releases/2023/release-notes-2023-may-30.qmd
-        - text: "Breaking changes & deprecations"
-          file: releases/breaking-changes/breaking-changes.qmd
         - text: "---"
         - text: "Fine Print"
         - about/fine-print/data-privacy-policy.qmd
