--- a/site/validmind/_sidebar.yml
+++ b/site/validmind/_sidebar.yml
@@ -2,7 +2,7 @@
 website:
   sidebar:
     - id: validmind-reference
-      title: "ValidMind Library Python API"
+      title: "ValidMind Library"
       collapsed: false
       collapse-level: 2
       contents:
@@ -10,7 +10,7 @@ website:
         - text: "---"
         - text: "Python API"
         # Root level items from validmind.qmd
-        - text: "<span class='version'>`2.8.18`</span>"
+        - text: "<span class='version'>`2.8.13`</span>"
           file: validmind/validmind.qmd#version__
         - text: "init<span class='suffix'></span>"
           file: validmind/validmind.qmd#init
