--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -92,6 +92,8 @@ website:
           file: guide/guides.qmd
         - text: "{{< fa envelope-open-text >}} Support"
           file: support/support.qmd
+        - text: "{{< fa bullhorn >}} Releases"
+          file: releases/all-releases.qmd
         - text: "---"
         - text:  "{{< fa cube >}} Python Library"
         - text: "{{< fa code >}} {{< var validmind.developer >}}"
