--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -340,15 +340,15 @@ website:
 
   page-footer:
     background: "#DE257E"
-    left: "© Copyright 2023-2024 {{< var validmind.legal >}}  All Rights Reserved."
+    left: "© Copyright {{< now year >}} {{< var validmind.legal >}}  All Rights Reserved."
     right:
       - text: "validmind.com {{< fa external-link >}}"
         href: https://validmind.com/
         target: _blank
       - text: "Privacy Policy"
-        href: https://validmind.com/privacy-policy/
+        href: https://validmind.com/about/legal/privacy-policy/
       - text: "Terms of Use"
-        href: https://validmind.com/terms-of-use/
+        href: https://validmind.com/about/legal/terms-of-use/
       - icon: github
         href: https://github.com/validmind/documentation
       - icon: linkedin
