Draft for new pages

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -248,11 +248,13 @@ website:
         - guide/model-inventory/view-model-activity.qmd
         - text: "---"
         - text: "Model Documentation"
-        - file: guide/model-documentation/working-with-documentation-templates.qmd
+        - text: "Managing templates & blocks"
+          file: guide/model-documentation/managing-templates-text-blocks.qmd
           contents:
           - guide/model-documentation/view-documentation-templates.qmd
           - guide/model-documentation/customize-documentation-templates.qmd
           - guide/model-documentation/swap-documentation-templates.qmd
+          - guide/model-documentation/manage-text-blocks.qmd
         - file: guide/model-documentation/working-with-model-documentation.qmd
           contents:
           - guide/model-documentation/view-documentation-guidelines.qmd
