--- a/.github/workflows/deploy-docs-prod.yaml
+++ b/.github/workflows/deploy-docs-prod.yaml
@@ -39,6 +39,9 @@ jobs:
       - name: Populate installation
         run: cp -r site/_source/installation/site/installation site/installation
 
+      - name: Copy assets
+        run: cp site/_source/installation/helm/example_litellm_config.yaml site/installation/helm/example_litellm_config.yaml
+
       - name: Render prod docs site
         run: |
             cd site
