Updated Developer Fundamentals training (#681)
* Edits for training paths, fixing weird casing

* Edits to Developer Fundamentals path

* Edits to Validator Fundamentals path

* Applying the variable where it was forgotten

* More edits to paths

* More edits to paths x2

* Modifying Makefile to make copy of new notebooks

* Pulled in latest from validmind-library

* Updated template for course registration

* Updated the Developer Fundamentals registration

* Adjusting the bullets for dev

* Draft for developer module 1

* Developer Fundamentals - Intro draft

* Developer Fundamentals - Register model draft

* Developer Fundamentals - Module 1 draft

* Removed extra drop-down menu from training

* Updated JH links

* Set up for Learning to run tests

* Learning to run tests - Explore tests draft

* Learning to run tests - Explore tests edits

* Learning to run tests - Run ValidMind tests draft

* Tweaking text size

* Learning to run tests - Log Validind tests draft

* Learning to run tests - draft

* Implementing custom tests — P1 draft

* Implementing custom tests — P2 setup

* Implementing custom tests — Draft done

* Finalizing model documentation set up

* Finalizing model documentation — Refine model documentation draft

* Finalizing model documentaiton - Submit for approval

* Finalizing model documentaiton - draft done

* Edited link to JH on landing

* Finetuning learning paths

* Editing Using VM for model dev

* Editing Learning 2 run tests

* Editing Implementing custom tests

* Editing Finalizing model documentation

* Editing the API ref .html links to .qmd

* Prereq cleanup

* Get your code snippet workaround

* Using VM for model development register model edit

* Updated the course template

* Tweaking Before you start

* Tested & updated run times

* Updated the est. for the listings

* Updated historical test result metadata

* ?? Why is the filter not working

* Getting rid of more conditions to check

* Changing env > vars for ENABLE_DEMO_NOTEB

--- a/.github/actions/staging-notebook/action.yml
+++ b/.github/actions/staging-notebook/action.yml
@@ -1,4 +1,4 @@
-name: Execute staging notebook
+name: Execute staging notebooks
 description: Installs python3, validmind, checks dependencies then executes ONLY the Intro for Model Developers notebook with staging heap tracking
 
 inputs:
@@ -24,6 +24,11 @@ runs:
         pip install shap==0.44.1
         pip install anywidget
 
+    - name: Register validmind kernel
+      shell: bash
+      run: |
+        python -m ipykernel install --user --name validmind --display-name "ValidMind Library"
+
     - name: Ensure .env file is available
       shell: bash
       id: find_env
@@ -33,14 +38,14 @@ runs:
           exit 1
         fi
 
-    - name: Execute ONLY the Intro for Model Developers notebook with heap staging
+    - name: Execute ONLY the ValidMind for model development series with heap staging
       shell: bash
       if: ${{ steps.find_env.outcome == 'success' }}
       run: |
           cd site
           source ../${{ inputs.env_file }}
-          quarto render --profile exe-staging notebooks/tutorials/intro_for_model_developers_EXECUTED.ipynb &> render_errors.log || {
-          echo "Execute for intro_for_model_developers_EXECUTED.ipynb failed";
+          quarto render --profile exe-staging notebooks/EXECUTED/model_development &> render_errors.log || {
+          echo "Execute for iValidMind for model development series failed";
           cat render_errors.log;
           exit 1;
           }
