--- a/.github/workflows/deploy-docs-prod.yaml
+++ b/.github/workflows/deploy-docs-prod.yaml
@@ -59,7 +59,7 @@ jobs:
           cat .env
 
       # Only execute the prod notebook if .env file is created
-      - name: Execute prod Intro for Model Developers notebook
+      - name: Execute prod ValidMind for model development series
         if: ${{ steps.create_env.outcome == 'success' }}
         uses: ./.github/actions/prod-notebook
         id: execute-prod-notebook
