--- a/.github/workflows/deploy-docs-staging.yaml
+++ b/.github/workflows/deploy-docs-staging.yaml
@@ -49,7 +49,7 @@ jobs:
           cat .env
 
       # Only execute the staging notebook if .env file is created
-      - name: Execute staging Intro for Model Developers notebook
+      - name: Execute staging ValidMind for model development series
         if: ${{ steps.create_env.outcome == 'success' }}
         uses: ./.github/actions/staging-notebook
         id: execute-staging-notebook
