--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -92,6 +92,8 @@ website:
           file: guide/guides.qmd
         - text: "{{< fa envelope-open-text >}} Support"
           file: support/support.qmd
+        - text: "{{< fa bullhorn >}} Releases"
+          file: releases/all-releases.qmd
         - text: "---"
         - text:  "{{< fa cube >}} Python Library"
         - text: "{{< fa code >}} {{< var validmind.developer >}}"
@@ -105,18 +107,18 @@ website:
         #   file: https://validmind.com/
         #   target: _blank
       # TRAINING MENU FOR ACADEMY SECTION
-      - text: "{{< fa graduation-cap >}} Training"
-        menu:
-        - text: "{{< fa house >}} ValidMind Academy"
-          file: training/training.qmd
-        - text: "---"
-        - text:  "{{< fa building-columns >}} Fundamentals"
-        - text: "{{< fa gear >}} For Administrators"
-          file: training/administrator-fundamentals/administrator-fundamentals-register.qmd
-        - text: "{{< fa code >}} For Developers"
-          file: training/developer-fundamentals/developer-fundamentals-register.qmd
-        - text: "{{< fa user-check >}} For Validators"
-          file: training/validator-fundamentals/validator-fundamentals-register.qmd
+      # - text: "{{< fa graduation-cap >}} Training"
+      #   menu:
+      #   - text: "{{< fa house >}} ValidMind Academy"
+      #     file: training/training.qmd
+      #   - text: "---"
+      #   - text:  "{{< fa building-columns >}} Fundamentals"
+      #   - text: "{{< fa gear >}} For Administrators"
+      #     file: training/administrator-fundamentals/administrator-fundamentals-register.qmd
+      #   - text: "{{< fa code >}} For Developers"
+      #     file: training/developer-fundamentals/developer-fundamentals-register.qmd
+      #   - text: "{{< fa user-check >}} For Validators"
+      #     file: training/validator-fundamentals/validator-fundamentals-register.qmd
       - text: "Log In"
         menu:
           - text: "Public Internet"
