--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -269,6 +269,13 @@ website:
         - text: "---"
         - text: "Model Validation"
         - guide/model-validation/manage-validation-guidelines.qmd
+        - text: "Managing templates & blocks"
+          file: guide/model-documentation/managing-templates-text-blocks.qmd
+          contents:
+          - guide/model-documentation/view-documentation-templates.qmd
+          - guide/model-documentation/customize-documentation-templates.qmd
+          - guide/model-documentation/swap-documentation-templates.qmd
+          - guide/model-documentation/manage-text-block-library.qmd
         - file: guide/model-validation/preparing-validation-reports.qmd
           contents:
           - guide/model-validation/review-model-documentation.qmd
