--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -47,6 +47,24 @@ jobs:
           exit 1;
           }
 
+    - name: Generate sitemap
+      run: |
+          cd site
+          # Get all HTML files from _site directory
+          find _site -name "*.html" | while read -r file; do
+            # Convert file path to URL path
+            url_path=$(echo "$file" | sed 's|^_site/||')
+            # Get last modified time
+            lastmod=$(date -r "$file" -u +"%Y-%m-%dT%H:%M:%SZ")
+            # Add to sitemap
+            printf "  <url>\n    <loc>https://docs-demo.vm.validmind.ai/pr_previews/${{ github.head_ref }}/%s</loc>\n    <lastmod>%s</lastmod>\n    <changefreq>weekly</changefreq>\n    <priority>0.8</priority>\n  </url>\n" "$url_path" "$lastmod" >> sitemap.xml.tmp
+          done
+          # Create final sitemap with header and footer
+          printf '<?xml version="1.0" encoding="UTF-8"?>\n<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">\n' > _site/sitemap.xml
+          cat sitemap.xml.tmp >> _site/sitemap.xml
+          printf '</urlset>\n' >> _site/sitemap.xml
+          rm sitemap.xml.tmp
+
     # See if site/notebooks/ has updates
     # Checks the current PR branch against the target branch
     - name: Filter changed files
@@ -89,21 +107,42 @@ jobs:
           echo "No warnings or errors detected during Quarto render"
         fi
 
-      # Demo bucket is in us-east-1
+    # Demo bucket is in us-east-1
     - name: Configure AWS credentials
       run: aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} && aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }} && aws configure set default.region us-east-1
 
     - name: Deploy PR preview
       run: aws s3 sync site/_site s3://docs-ci-cd-demo/site/pr_previews/${{ github.head_ref }} --delete && aws cloudfront create-invalidation --distribution-id E38AINJY5CYN6P --paths "/*" --no-cli-pager
 
-    - name: Post comment with preview URL
+    - name: Post preview URL comment
       uses: actions/github-script@v6
       with:
         script: |
-          const url = `https://docs-demo.vm.validmind.ai/pr_previews/${{ github.head_ref }}/index.html`;
+          const previewUrl = `https://docs-demo.vm.validmind.ai/pr_previews/${{ github.head_ref }}/index.html`;
+          
+          // Delete old preview comments
+          const { data: comments } = await github.rest.issues.listComments({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.issue.number,
+          });
+          
+          for (const comment of comments) {
+            if (comment.user.login === 'github-actions[bot]' && comment.body.includes('## Validate docs site')) {
+              await github.rest.issues.deleteComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: comment.id,
+              });
+            }
+          }
+          
+          let comment = `## Validate docs site\n\n`;
+          comment += `✓ INFO: A live preview of the docs site is available — [Open the preview](${previewUrl})\n\n`;
+
           github.rest.issues.createComment({
             owner: context.repo.owner,
             repo: context.repo.repo,
             issue_number: context.issue.number,
-            body: `A PR preview is available: [Preview URL](${url})`
+            body: comment
           });
