--- a/site/validmind/_sidebar.yml
+++ b/site/validmind/_sidebar.yml
@@ -2,7 +2,7 @@
 website:
   sidebar:
     - id: validmind-reference
-      title: "ValidMind Library"
+      title: "ValidMind Library Python API"
       collapsed: false
       collapse-level: 2
       contents:
@@ -10,7 +10,7 @@ website:
         - text: "---"
         - text: "Python API"
         # Root level items from validmind.qmd
-        - text: "<span class='version'>`2.8.13`</span>"
+        - text: "<span class='version'>`2.8.23`</span>"
           file: validmind/validmind.qmd#version__
         - text: "init<span class='suffix'></span>"
           file: validmind/validmind.qmd#init
@@ -42,6 +42,8 @@ website:
           file: validmind/validmind.qmd#test
         - text: "log_text<span class='suffix'></span>"
           file: validmind/validmind.qmd#log_text
+        - text: "experimental_agent<span class='suffix'></span>"
+          file: validmind/validmind.qmd#experimental_agent
         - text: "<span class='prefix'></span> RawData"
           file: validmind/validmind.qmd#rawdata
           contents:
