--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -249,12 +249,15 @@ website:
           - guide/model-inventory/archive-delete-models.qmd
         - guide/model-inventory/view-model-activity.qmd
         - text: "---"
-        - text: "Model Documentation"
-        - file: guide/model-documentation/working-with-documentation-templates.qmd
+        - text: "Templates"
+        - file: guide/templates/working-with-documentation-templates.qmd
           contents:
-          - guide/model-documentation/view-documentation-templates.qmd
-          - guide/model-documentation/customize-documentation-templates.qmd
-          - guide/model-documentation/swap-documentation-templates.qmd
+          - guide/templates/view-documentation-templates.qmd
+          - guide/templates/customize-documentation-templates.qmd
+          - guide/templates/swap-documentation-templates.qmd
+        - guide/templates/manage-text-block-library.qmd
+        - text: "---"
+        - text: "Model Documentation"
         - file: guide/model-documentation/working-with-model-documentation.qmd
           contents:
           - guide/model-documentation/view-documentation-guidelines.qmd
