--- a/site/_quarto-exe-demo.yml
+++ b/site/_quarto-exe-demo.yml
@@ -6,7 +6,7 @@ format:
     include-in-header: 
       - environments/heap-development.html
     include-after-body: 
-      - https://unpkg.com/@jupyter-widgets/html-manager@*/dist/embed-amd.js
+      - developer/embed-amd.js
 execute: 
   enabled: true
   freeze: auto
