--- a/site/_quarto-exe-demo.yml
+++ b/site/_quarto-exe-demo.yml
@@ -5,8 +5,7 @@ format:
     code-tools: true
     include-in-header: 
       - environments/heap-development.html
-    include-after-body: 
-      - developer/jupyter-widgets/embed-amd.js
+    embed-resources: true
 execute: 
   enabled: true
   freeze: auto
