Oops, missed one adjustment

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -77,7 +77,7 @@ jobs:
       uses: ./.github/actions/demo-notebook
       id: execute-demo-notebook
       with:
-        env_file: dev.env
+        dev_env: dev.env
 
     - name: Test for warnings or errors
       run: |
