Adding validation execution

--- a/site/_quarto-exe-demo.yml
+++ b/site/_quarto-exe-demo.yml
@@ -3,6 +3,7 @@ format:
     page-layout: full
     navbar: false
     code-tools: true
+    repo-actions: false
     include-in-header: 
       - environments/heap-development.html
 execute: 
