--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -1,9 +1,12 @@
 name: Execute demo notebooks
-description: Installs python3, validmind, checks dependencies then executes ONLY the Intro for Model Developers notebook with development heap tracking
+description: Installs python3, validmind, checks dependencies then executes ONLY the training notebook series with development heap tracking
 
 inputs:
   dev_env:
     description: "Load the created dev.env file"
+    required: true
+  valid_env:
+    description: "Load the created valid.env file"
     required: true
 
 runs:
@@ -47,6 +50,28 @@ runs:
           source ../.env
           quarto render --profile exe-demo notebooks/EXECUTED/model_development &> render_errors.log || {
             echo "Execute for ValidMind for model development series failed";
+            cat render_errors.log;
+            exit 1;
+          }
+
+    - name: Ensure valid.env file is available
+      shell: bash
+      id: find_valid_env
+      run: |
+        if [ ! -f "${{ inputs.valid_env }}" ]; then
+          echo "Error: valid.env file not found at ${{ inputs.valid_env }}"
+          exit 1
+        fi
+
+    - name: Execute ONLY the ValidMind for model validation series with heap development
+      shell: bash
+      if: ${{ steps.find_valid_env.outcome == 'success' }}
+      run: |
+          cd site
+          cp ../${{ inputs.valid_env }} ../.env
+          source ../.env
+          quarto render --profile exe-demo notebooks/EXECUTED/model_validation &> render_errors.log || {
+            echo "Execute for ValidMind for model validation series failed";
             cat render_errors.log;
             exit 1;
           }
