Made filter more restrictive for notebooks

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -57,7 +57,7 @@ jobs:
         ref: ${{ github.head_ref }}
         filters: |
           notebooks:
-            - 'site/notebooks/**'
+            - 'site/notebooks/EXECUTED/**'
 
     # If yes then create the dev.env file for use in execution step
     - name: Create dev.env file
