Editing new quickstart links

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -46,8 +46,8 @@ website:
           file: developer/validmind-library.qmd
         - text: "{{< fa cubes >}} Supported Models"
           file: developer/supported-models.qmd
-        - text: "{{< fa rocket >}} QuickStart Notebook"
-          file: notebooks/quickstart_customer_churn_full_suite.ipynb
+        - text: "{{< fa rocket >}} Documentation QuickStart"
+          file: notebooks/quickstart/quickstart_model_documentation.ipynb
         - text: "---"
         - text:  "{{< fa vial >}} TESTING"
         - text: "{{< fa flask-vial >}} Run Tests & Test Suites"
