Add Vale config file, update readme

--- a/.vale.ini
+++ b/.vale.ini
@@ -1,5 +1,16 @@
 StylesPath = .vale/styles
 MinAlertLevel = suggestion
 
-[*.{md,yml,yaml}]
+Skips = _*, */_*, plugin/*
+
+[*.md]
+BasedOnStyles = Vale, Google
+
+[*.qmd]
+BasedOnStyles = Vale, Google
+
+[*.yml]
+BasedOnStyles = Vale
+
+[*.yaml]
 BasedOnStyles = Vale 
