More Vale config shenanigans

--- a/site/.vale.ini
+++ b/site/.vale.ini
@@ -4,10 +4,10 @@ MinAlertLevel = suggestion
 Skips = _*, */_*, plugin/*
 
 [*.md]
-BasedOnStyles = Vale, Google
+BasedOnStyles = Vale
 
 [*.qmd]
-BasedOnStyles = Vale, Google
+BasedOnStyles = Vale
 
 [*.yml]
 BasedOnStyles = Vale
