Yet more Vale fun

--- a/.vale.ini
+++ b/.vale.ini
@@ -4,10 +4,10 @@ MinAlertLevel = suggestion
 Skips = _*, */_*, plugin/*
 
 [*.md]
-BasedOnStyles = Vale
+BasedOnStyles = Vale, Google
 
 [*.qmd]
-BasedOnStyles = Vale
+BasedOnStyles = Vale, Google
 
 [*.yml]
 BasedOnStyles = Vale
