Switch vale sync to install

--- a/.github/workflows/vale-lint.yaml
+++ b/.github/workflows/vale-lint.yaml
@@ -23,10 +23,10 @@ jobs:
         tar -xvzf vale_2.28.0_Linux_64-bit.tar.gz
         sudo mv vale /usr/local/bin/
 
-    - name: Download Vale community styles
+    - name: Install Vale styles
       run: |
-        mkdir -p .vale/styles
-        vale sync
+        vale install github:errata-ai/Google
+        vale install github:errata-ai/Vale
 
     - name: Run Vale
       id: vale
