--- a/.vale.ini
+++ b/.vale.ini
@@ -3,6 +3,10 @@ MinAlertLevel = suggestion
 
 Skips = _*, */_*, plugin/*
 
+[Packages]
+Google = github:errata-ai/Google
+Vale = github:errata-ai/Vale
+
 [*.md]
 BasedOnStyles = Vale, Google
 
@@ -13,4 +17,4 @@ BasedOnStyles = Vale, Google
 BasedOnStyles = Vale
 
 [*.yaml]
-BasedOnStyles = Vale 
+BasedOnStyles = Vale
