--- a/.github/workflows/vale-lint.yaml
+++ b/.github/workflows/vale-lint.yaml
@@ -23,6 +23,9 @@ jobs:
         tar -xvzf vale_2.28.0_Linux_64-bit.tar.gz
         sudo mv vale /usr/local/bin/
 
+    - name: Create styles directory
+      run: mkdir -p .vale/styles
+
     - name: Install Vale styles
       run: |
         vale install github:errata-ai/Google
