Update readme again, bump lighthose to depth 2

--- a/.github/workflows/lighthouse-check.yaml
+++ b/.github/workflows/lighthouse-check.yaml
@@ -8,12 +8,12 @@ on:
       depth:
         description: 'Depth level to check (0=root pages only, 1=first level subdirectories, 2=second level)'
         required: false
-        # Change the default depth level here
-        # 0: Top-level navigation only (e.g. /index.html, /guide/guides.html, /developer/validmind-library.html, etc.)
-        # 1: All first-level subdirectories (e.g. /guide/*.html)
-        # 2: All second-level subdirectories (e.g. /guide/attestation/*.html)
+        # To change the default depth level:
+        # 0 — Top-level navigation only (e.g. /index.html, /guide/guides.html, /developer/validmind-library.html, etc.)
+        # 1 — All first-level subdirectories (e.g. /guide/*.html)
+        # 2 — All second-level subdirectories (e.g. /guide/attestation/*.html)
         # Note: While the crawler technically supports deeper levels, expect the workflow to take >2-12 hours to complete
-        default: '1'
+        default: '2'
         type: string
 
 permissions:
