Fix .vale.ini and sync packages

--- a/.vale.ini
+++ b/.vale.ini
@@ -3,9 +3,7 @@ MinAlertLevel = suggestion
 
 Skips = _*, */_*, plugin/*
 
-[Packages]
-Google = github:errata-ai/Google
-Vale = github:errata-ai/Vale
+Packages = Google
 
 [*.md]
 BasedOnStyles = Vale, Google
