Fix JSON output for Vale

--- a/.github/workflows/vale-lint.yaml
+++ b/.github/workflows/vale-lint.yaml
@@ -27,7 +27,7 @@ jobs:
       id: vale
       continue-on-error: true
       run: |
-        vale site/ || {
+        vale --output=JSON site/ > vale-report.json || {
           echo "Vale linting found issues"
           exit 1
         }
